# UCI_race_stack_V2

./: .gitignore  LICENSE  README.md  pyproject.toml
dreamer/: pyproject.toml
dreamer/src/: configs.yaml  dreamer.py  networks.py  tools.py  wrappers.py
log/log_dir/: events.out.tfevents.1750794127.Mac.attlocal.net.5046.0  events.out.tfevents.1750794521.Mac.attlocal.net.5299.0  events.out.tfevents.1750794556.Mac.attlocal.net.5319.0  events.out.tfevents.1750794609.Mac.attlocal.net.5420.0  events.out.tfevents.1750794634.Mac.attlocal.net.5468.0  events.out.tfevents.1750794645.Mac.attlocal.net.5527.0  events.out.tfevents.1750794867.Mac.attlocal.net.6998.0  events.out.tfevents.1750794889.Mac.attlocal.net.7084.0  events.out.tfevents.1750795567.Mac.attlocal.net.7423.0  events.out.tfevents.1750795804.Mac.attlocal.net.7656.0  events.out.tfevents.1750796090.Mac.attlocal.net.8007.0  events.out.tfevents.1750796107.Mac.attlocal.net.8044.0  events.out.tfevents.1750796137.Mac.attlocal.net.8108.0  events.out.tfevents.1750796190.Mac.attlocal.net.8206.0  events.out.tfevents.1750796200.Mac.attlocal.net.8247.0  events.out.tfevents.1750797517.Mac.attlocal.net.8628.0  events.out.tfevents.1750797570.Mac.attlocal.net.8693.0  events.out.tfevents.1750797927.Mac.attlocal.net.8934.0  events.out.tfevents.1750798363.Mac.attlocal.net.9348.0  events.out.tfevents.1750798405.Mac.attlocal.net.9491.0  events.out.tfevents.1750798415.Mac.attlocal.net.9535.0  events.out.tfevents.1750798523.Mac.attlocal.net.9776.0  events.out.tfevents.1750798551.Mac.attlocal.net.9838.0  (+38 more)
(+12 files in other folders)
