[project]
name = "f1tenth-race-stack"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "racecar-gym",
    "gymnasium>=1.0.0",
    "dreamer",
    "tensorboard>=2.19.0",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
racecar-gym = { workspace = true }
dreamer = { workspace = true }

[tool.uv.workspace]
members = ["racecar_gym", "dreamer"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
